--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -9,6 +9,12 @@
 @import "partials/colors";
 @import "partials/layout";
 
+.invitation__dates {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+
 /* ==========================================================================
 Global Styles
 ========================================================================== */
@@ -250,9 +256,10 @@ Navigation
 /* ==========================================================================
 Hero
 ========================================================================== */
+
 .hero {
   min-height: 750px;
-  background: url('../img/hero-min.jpg') center center;
+  background: url('../img/my-hero.jpeg') center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -278,11 +285,11 @@ Hero
     margin-bottom: 80px;
   }
   .hero-content {
-    padding-top: 40%;
+    padding-top: 33%;
   }
   .hero-content img {
-    width: 55%;
-    margin-bottom: 12%;
+    width: 65%;
+    margin-bottom: 14%;
   }
 }
 .navigation {
@@ -293,7 +300,7 @@ Hero
 }
 .fixed {
   position: fixed;
-  background-color: rgba(55, 36, 40, .88);
+  background-color: rgba(31, 31, 33, 0.8);
   z-index: 999;
   width: 100%;
 }
@@ -318,7 +325,7 @@ header {
     display: inline-block;
   }
   .logo img {
-    height: 19px;
+    height: 28px;
   }
   ul.primary-nav {
     margin: 0 0 0 75px;
@@ -821,7 +828,7 @@ RSVP form
         left: 30px;
         transform: translateY(-50%);
       }
-      i.fa-user, i.fa-users, i.fa-envelope, .fa-key {
+      i.fa-user, i.fa-users, i.fa-phone, .fa-key {
         font-size: 14px;
         position: absolute;
         top: 50%;
